--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -10,15 +10,13 @@ on:
 jobs:
   cypress-run:
     runs-on: ubuntu-24.04
-    container:
-      image: cypress/browsers:22.12.0
-      options: --user 1001
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      # Install npm dependencies, cache them correctly
+      # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
           build: npm run build
           start: npm start
-          browser: chrome
