--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^14.0.0"
+    "cypress": "^14.0.0",
+    "typescript": "^5.7.3"
   }
 }
